change github url

--- a/serveurs_mail_openbsd.tex
+++ b/serveurs_mail_openbsd.tex
@@ -47,7 +47,7 @@ Cet article suivra le schéma suivant :\\
 	\item Un peu de pf
 \end{itemize} 
 \vspace{5mm}
-Enfin, les sources de cet article sont disponibles via un SCM\footnote{http://github.com/j4/articles/}. 
+Enfin, les sources de cet article sont disponibles via un SCM\footnote{http://github.com/j4/privatemails/}. 
 Merci de contribuer si vous souhaitez le compléter.
 
 \section*{Installation d'une VM avec Linux/Kvm et virt-install}
