--- a/serveurs_mail_openbsd.tex
+++ b/serveurs_mail_openbsd.tex
@@ -1,6 +1,8 @@
 %\documentclass[a4paper,11pt,twocolumn]{article}
 \documentclass[a4paper,11pt]{article}
 
+nmap -Pn --script smtp-open-relay hermes.ifup.sh
+
 \usepackage[utf8]{inputenc}
 \usepackage[french]{babel}
 \usepackage{graphicx}
