--- a/private_mails_openbsd.mkd
+++ b/private_mails_openbsd.mkd
@@ -242,7 +242,7 @@ cat /etc/pf.conf
 	pass in log on egress proto tcp from <spamd-white> to any port smtp
 	pass out log on egress proto tcp to any port smtp
 
-Puis création du group admin :
+Puis création du group admin sur *em1* qui est l'interface utilisé pour l'admin via ssh :
 
 	echo "!/sbin/ifconfig em1 group lan" >> /etc/hostname.em1 && sh /etc/netstart && pfctl -f /etc/pf.conf
 	
